--- a/CMS.API/appsettings.json
+++ b/CMS.API/appsettings.json
@@ -1,6 +1,11 @@
 {
   "AppSettings": {
-    "Key": "This is my top secret, use your own secret"
+    "key1": ""
+  },
+  "Jwt": {
+    "Key": "This is my top secret, use your own secret",
+    "Issuer": "your_issuer",
+    "Audience": "your_audience"
   },
   "ConnectionStrings": {
     "dbCMS": "server=SHEIK;database=CMS;UID=sa;PWD=Sql2014#sa;Connection Timeout=30;Encrypt=false;"
