--- a/CMS.API/appsettings.json
+++ b/CMS.API/appsettings.json
@@ -8,8 +8,7 @@
     "Audience": "your_audience"
   },
   "ConnectionStrings": {
-    "dbCMS": "server=SHEIK;database=CMS;UID=sa;PWD=Sql2014#sa;Connection Timeout=30;Encrypt=false;"
-    //"dbCMS": "data source=SHEIK;initial catalog=CMS;persist security info=True; Integrated Security=SSPI;Connection Timeout=30;Encrypt=false;"
+    "dbCMS": "Add your database dttails"
   },
   "Logging": {
     "LogLevel": {
