--- a/CMS.API/appsettings.json
+++ b/CMS.API/appsettings.json
@@ -8,7 +8,7 @@
     "Audience": "your_audience"
   },
   "ConnectionStrings": {
-    "dbCMS": "server=SHEIK;database=CMS;UID=sa;PWD=Sql2014#sa;Connection Timeout=30;Encrypt=false;"
+    "dbCMS": "Server=YOUR_SERVER_NAME;Database=CMS;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
